[metadata]
name = laracna
version = 1.0.0
url = https://github.com/Beirdo/laracna
licence = MIT
description = Custom Spider tool
long_description = file:README.md

[options]
include_package_data = true
package_dir =
    = src
packages = find:

[options.packages.find]
where =
    src

[pep8]
max-line-length = 100